# Hackathon_Alfa_task

./: .gitignore  Makefile  README.md  alembic.ini  development.sqlite  docker-compose.yaml  requirements.txt  tox.ini
app/: Dockerfile  alembic.ini  app_config.py  config.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
app/api/v1/: routers.py  validators.py
app/api/v1/endpoints/: __init__.py  analytics.py  comment.py  employee.py  notification.py  plan.py  task.py
app/api/v1/openapi/: __init__.py  analytics.py  base.py  comment.py  employee.py  notification.py  plan.py  task.py
app/auth/: schemas.py  token.py
app/core/: config.py  exceptions.py  logger.py  utils.py
app/db/: database.py  fill_table_users.py
app/db/crud/: __init__.py  base.py  comment.py  notification.py  plan.py  task.py  user.py
app/db/migrations/: README.md  env.py  script.py.mako
app/db/migrations/versions/: 01_initial_5b64746fec88_.py  02_7759358cc3f2_.py  02_c20ee987ab46_.py  02_dab068d0d2e2_.py  03_d07d97a7e584_.py  04_c21d35bdffd1_.py  2024_01_24_1814-a71e89cc6369_.py  (+1 more)
app/plan/: routers.py  schemas.py
app/schemas/: __init__.py  base.py  comment.py  notification.py  plan.py  task.py  user.py
app/services/: daily_status_check.py  user.py
app/tests/: conftest.py  test_employees.py  test_main.py
infra/: docker-compose.yaml  (+2 more)
tests/: Dockerfile  docker-entrypoint.sh  pyproject.toml
tests/functional/: conftest.py  settings.py
tests/functional/src/: test_notification.py  test_task.py
tests/functional/testdata/: schemas.py
tests/functional/utils/: pk.py
(+12 files in other folders)
